--- a/_includes/form.html
+++ b/_includes/form.html
@@ -13,20 +13,20 @@
             <div class="help-block with-errors"></div>
         </div>
         <div class="col-12 form-group">
-            <select class="select2" name="service">
-                <option value="0">Epoxy Flooring</option>
-                <option value="Australia">Decorative Concrete</option>
-                <option value="England">New Concrete</option>
-                <option value="London">Something Else</option>
-                <option value="United States">Not Sure</option>
+            <select class="select2" name="service" placeholder="What service are you interested in?*" data-error="This field is required">
+                <option value="Epoxy Flooring">Epoxy Flooring</option>
+                <option value="Decorative Concrete">Decorative Concrete</option>
+                <option value="New Concrete">New Concrete</option>
+                <option value="Something Else">Something Else</option>
+                <option value="Not Sure">Not Sure</option>
             </select>
             <div class="help-block with-errors"></div>
         </div>
         <div class="col-12 form-group">
-            <select class="select2" name="type">
-                <option value="0">Residential</option>
-                <option value="Australia">Commercial</option>
-                <option value="England">Industrial</option>
+            <select class="select2" name="type" placeholder="What type of project do you have?*" data-error="This field is required">
+                <option value="Residential">Residential</option>
+                <option value="Commercial">Commercial</option>
+                <option value="Industrial">Industrial</option>
             </select>
             <div class="help-block with-errors"></div>
         </div>
