--- a/_includes/form.html
+++ b/_includes/form.html
@@ -13,7 +13,7 @@
             <div class="help-block with-errors"></div>
         </div>
         <div class="col-12 form-group">
-            <select class="select2" name="service" placeholder="What service are you interested in?*" data-error="This field is required">
+            <select class="select2" name="service" data-error="This field is required">
                 <option value="Epoxy Flooring">Epoxy Flooring</option>
                 <option value="Decorative Concrete">Decorative Concrete</option>
                 <option value="New Concrete">New Concrete</option>
@@ -23,7 +23,8 @@
             <div class="help-block with-errors"></div>
         </div>
         <div class="col-12 form-group">
-            <select class="select2" name="type" placeholder="What type of project do you have?*" data-error="This field is required">
+            <label>What kind of project do you have?</label>
+            <select class="select2" name="type" data-error="This field is required">
                 <option value="Residential">Residential</option>
                 <option value="Commercial">Commercial</option>
                 <option value="Industrial">Industrial</option>
