--- a/_includes/form.html
+++ b/_includes/form.html
@@ -41,10 +41,10 @@
 
 <form class="contact-form-box" name="contact" method="POST" data-netlify="true">
     <p class="form-group">
-      <label>Your Name: <input type="text" name="name" /></label>   
+      <label>Your Name: <input class="form-control" type="text" name="name" /></label>   
     </p>
     <p class="form-group">
-      <label>Your Email: <input type="email" name="email" /></label>
+      <label>Your Email: <input class="form-control" type="email" name="email" /></label>
     </p>
     <p class="form-group">
       <label>Your Role: <select name="role[]" multiple>
@@ -53,7 +53,7 @@
       </select></label>
     </p>
     <p class="form-group">
-      <label>Message: <textarea name="message"></textarea></label>
+      <label>Message: <textarea class="form-control" name="message"></textarea></label>
     </p>
     <p class="form-group">
       <button type="submit">Send</button>
