--- a/_includes/form.html
+++ b/_includes/form.html
@@ -1,4 +1,4 @@
-<form class="contact-form-box" id="contact-form-2" name="main-contact-form" method="POST" netlify action="/contact/thanks">
+<form class="contact-form-box" id="contact-form-2" name="contact" method="POST" data-netlify="true">
     <div class="row">
         <div class="col-12 form-group">
             <input type="text" placeholder="Name*" class="form-control" name="name" data-error="Name field is required" required>
