--- a/_includes/form.html
+++ b/_includes/form.html
@@ -1,7 +1,7 @@
 <form class="contact-form-box" id="contact-form-2" name="contact" method="POST" data-netlify="true">
     <div class="row">
         <div class="col-12 form-group">
-            <input type="text" placeholder="Name*" class="form-control" name="name" data-error="Name field is required" required>
+          <label>Your Name: <input class="form-control" type="text" name="name" /></label>
         </div>
         <div class="col-12 form-group">
             <input type="email" placeholder="E-mail*" class="form-control" name="email" data-error="email field is required" required>
