--- a/_includes/form.html
+++ b/_includes/form.html
@@ -1,23 +1,24 @@
-<form class="contact-form-box" id="contact-form-2" name="contact" method="POST" data-netlify="true">
+<form class="contact-form-box" name="contact" method="POST" data-netlify="true">
     <div class="row">
         <div class="col-12 form-group">
           <label>Your Name: <input class="form-control" type="text" name="name" /></label>
         </div>
         <div class="col-12 form-group">
-            <input type="email" placeholder="E-mail*" class="form-control" name="email" data-error="email field is required" required>
+          <label>Your Email: <input class="form-control" type="email" name="email" required /></label>
         </div>
         <div class="col-12 form-group">
             <input type="text" placeholder="Phone*" class="form-control" name="phone" data-error="Phone field is required" required>
         </div>
         <div class="col-12 form-group">
-            <label>What service are you interested in?</label>
-            <select class="select2" name="service" data-error="This field is required">
+            <label>What service are you interested in?
+            <select class="select2" name="service[]" required multiple>
                 <option value="Epoxy Flooring">Epoxy Flooring</option>
                 <option value="Decorative Concrete">Decorative Concrete</option>
                 <option value="New Concrete">New Concrete</option>
                 <option value="Something Else">Something Else</option>
                 <option value="Not Sure">Not Sure</option>
             </select>
+          </label>
         </div>
         <div class="col-12 form-group">
             <label>What kind of project do you have?</label>
