--- a/_includes/form.html
+++ b/_includes/form.html
@@ -2,9 +2,11 @@
     <div class="row">
         <div class="col-12 form-group">
           <label>Your Name: <input class="form-control" type="text" name="name" required /></label>
+          <label>Your Email: <input class="form-control" type="email" name="email" required /></label>
         </div>
         <div class="col-12 form-group">
           <label>Your Email: <input class="form-control" type="email" name="email" required /></label>
+          <label>Your Phone Number: <input class="form-control" type="text" name="phone" required /></label>
         </div>
         <div class="col-12 form-group">
           <label>Your Phone Number: <input class="form-control" type="text" name="phone" required /></label>
