--- a/_includes/form.html
+++ b/_includes/form.html
@@ -23,21 +23,7 @@
           </label>
         </div>
         <div class="col-12 form-group">
-            <label>What kind of project do you have?</label>
-            <select class="select2" name="type" data-error="This field is required">
-                <option value="Residential">Residential</option>
-                <option value="Commercial">Commercial</option>
-                <option value="Industrial">Industrial</option>
-            </select>
-        </div>
-        <div class="col-12 form-group">
-            <input type="text" placeholder="How many square feet?" class="form-control" name="sqft" data-error="Estimated square footage field is required" required>
-        </div>
-        <div class="col-12 form-group">
-            <textarea name="about" placeholder="Tell us about your project..." class="form-control" data-error="About field is required" cols="30" rows="4" required></textarea>
-        </div>
-        <div class="col-12 form-group">
-            <button type="submit" class="fw-btn-fill mg-t-10 bg-Primary text-textprimary">SEND<i class="fas fa-chevron-right"></i></button>
+          <button type="submit">Send</button>
         </div>
     </div>
 </form>
