--- a/_includes/form.html
+++ b/_includes/form.html
@@ -23,7 +23,7 @@
           </label>
         </div>
         <div class="col-12 form-group">
-          <button type="submit">Send</button>
+            <button type="submit" class="fw-btn-fill mg-t-10 bg-Primary text-textprimary">SEND<i class="fas fa-chevron-right"></i></button>
         </div>
     </div>
 </form>
