--- a/style.css
+++ b/style.css
@@ -2268,7 +2268,7 @@ h6 {
   border-radius: 4px;
   background-color: #184266;
 }
-.contact-form-box input {
+.contact-form-box label {
   width:100% !important;
 }
 @media only screen and (max-width: 991px) {
