--- a/_includes/form.html
+++ b/_includes/form.html
@@ -23,6 +23,9 @@
         <div class="col-12 form-group">
           <label>Estimated Square Footage: <input class="form-control" type="text" name="sqft" required /></label>
         </div>
+        <div class="col-12">
+          <textarea class="form-control" name="about" cols="30" rows="4" required></textarea>
+        </div>
         <div class="col-12 form-group">
             <button type="submit" class="fw-btn-fill mg-t-10 bg-Primary text-textprimary">SEND<i class="fas fa-chevron-right"></i></button>
         </div>
