--- a/_includes/form.html
+++ b/_includes/form.html
@@ -23,8 +23,10 @@
         <div class="col-12 form-group">
           <label>Estimated Square Footage: <input class="form-control" type="text" name="sqft" required /></label>
         </div>
-        <div class="col-12">
+        <div class="col-12 form-group">
+          <label>Tell us about your project...
           <textarea class="form-control" name="about" cols="30" rows="4" required></textarea>
+        </label>
         </div>
         <div class="col-12 form-group">
             <button type="submit" class="fw-btn-fill mg-t-10 bg-Primary text-textprimary">SEND<i class="fas fa-chevron-right"></i></button>
