--- a/_includes/form.html
+++ b/_includes/form.html
@@ -1,4 +1,4 @@
-<form class="contact-form-box" name="contact" method="POST" data-netlify="true">
+<form class="contact-form-box" name="contact" method="POST" data-netlify="true" action="/thank-you/">
     <div class="row">
         <div class="col-12 form-group">
           <label>Your Name: <input class="form-control" type="text" name="name" required /></label>
