--- a/_includes/service/sidebar.html
+++ b/_includes/service/sidebar.html
@@ -41,30 +41,7 @@
         <div class="heading-layout3">
             <h3>Let's Talk About Your Project</h3>
         </div>
-        <form class="contact-form-box" netlify action="/thank-you">
-            <div class="row">
-                <div class="col-12 form-group">
-                    <input type="text" placeholder="Name *" class="form-control" name="name" data-error="Name field is required" required>
-                    <div class="help-block with-errors"></div>
-                </div>
-                <div class="col-12 form-group">
-                    <input type="text" placeholder="Phone *" class="form-control" name="phone" data-error="Phone number field is required" required>
-                    <div class="help-block with-errors"></div>
-                </div>
-                <div class="col-12 form-group">
-                    <input type="email" placeholder="E-mail *" class="form-control" name="email" data-error="E-mail field is required" required>
-                    <div class="help-block with-errors"></div>
-                </div>
-                <div class="col-12 form-group">
-                    <input type="text" placeholder="What’s your question *" class="form-control" name="question" data-error="Question field is required" required>
-                    <div class="help-block with-errors"></div>
-                </div>
-                <div class="col-12 form-group">
-                    <button type="submit" class="item-btn">Send</button>
-                </div>
-            </div>
-            <div class="form-response"></div>
-        </form>
+        {% include form.html %}
     </div>
     <div class="widget widget-banner d-none d-sm-block">
         <div class="banner-img">
