--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -128,6 +128,9 @@
                                             <li>
                                                 <a href="{{ site.url}}/blog">Blog</a>
                                             </li>
+                                            <li>
+                                                <a href="{{ site.url }}/about">Our Company</a>
+                                            </li>
                                         </ul>
                                     </li>
                                     <li>
@@ -138,6 +141,9 @@
                                             </li>
                                             <li>
                                                 <a href="{{ site.url}}/services/decorative-concrete-utah">Decorative Concrete</a>
+                                            </li>
+                                            <li>
+                                                <a href="{{ site.url }}/services">All Services</a>
                                             </li>
                                         </ul>
                                     </li>
