--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -33,7 +33,7 @@ layout: default
                     <div class="col-lg-6 col-md-6 col-12">
                         <div class="blog-box-layout3">
                             <div class="item-img">
-                                <a href="{{ post.permalink }}"><img src="{{ post.image }}" alt="{{ post.title }}"></a>
+                                <a href="{{ post.permalink }}"><img src="{{ post.ftImg }}" alt="{{ post.title }}"></a>
                             </div>
                             <div class="item-content">
                                 <h3 class="item-title"><a href="{{ post.permalink }}">{{ post.title }}</a></h3>
