--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,15 +8,15 @@ layout: default
         <div class="row">
             <div class="col-12">
                 <div class="breadcrumbs-area">
-                    <h1>How to Spot and Treat Wind Damage on Your Roof Top</h1>
+                    <h1>{{ post.title }}</h1>
                     <ul>
                         <li>
-                            <a href="index.html">Home</a>
+                            <a href="{{ site.url }}">Home</a>
                         </li>
                         <li>
-                            <a href="blog1.html">Blogs</a>
+                            <a href="{{ site.url }}/blog">Blog</a>
                         </li>
-                        <li>Details</li>
+                        <li>{{ post.title }}</li>
                     </ul>
                 </div>
             </div>
@@ -31,90 +31,14 @@ layout: default
             <div class="col-lg-8 col-12">
                 <div class="single-blog-box-layout1">
                     <div class="post-img">
-                        <img src="img/blog/blog26.jpg" alt="Blog"> 
+                        <img src="{{ post.ftImg }}" alt="{{ post.title }}"> 
                     </div>
                     <div class="item-content">
                         <ul class="entry-meta">
-                            <li><i class="fas fa-user"></i>by <a href="#" class="author">Elite Concrete Utah</a></li>
-                            <li><i class="fas fa-tag"></i><a href="#">{{ post.title }}</a></li>
+                            <li><i class="fas fa-user"></i>by <a href="{{ site.url }}" class="author">Elite Concrete Utah</a></li>
                         </ul>
-                        <p>As a direct line to human feeling, empathic experience, genuine 
-                            language and detail poetry standard dummy text ever since the 
-                            1500s, when an unknown printer took a galley of type and scrambled 
-                            it to make a type specimen book. It has survived not only five 
-                            centuries, but also the leap into electronic typesetting, remaining  
-                            with desktop publishing </p>
-                        <blockquote>” Aimply dummy text of the printing and typesetting industry lorem Ipsum 
-                            has been the industry's standard dummy text ever since ”
-                            <div class="quote-author">Jessica Mcdade</div>
-                        </blockquote>
-                        <p>As a direct line to human feeling, empathic experience, genuine language and 
-                            detail poetry standard dummy text ever since the 1500s, when an unknown printer 
-                            took a galley of type and scrambled it to make a type specimen book. It has 
-                            survived not only five centuries, but also the leap into electronic typesetting, 
-                            remaining essentiall year unchanged. It was popularised in the with the release 
-                            of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop 
-                            publishing </p>
-                        <div class="others-info">
-                            <div class="row">
-                                <div class="col-xl-6 col-12">
-                                    <div class="item-img">
-                                        <img src="img/blog/blog27.jpg" alt="image">
-                                    </div>
-                                </div>
-                                <div class="col-xl-6 col-12">
-                                    <div class="info-content">
-                                        <h3 class="other-title">Roofing Solution</h3>
-                                        <p>When an unknown printer took a galley of type 
-                                            and scrambled it to make a type specimen book. 
-                                            It has survived not only five centuries, but 
-                                            also the leap into electronic typesetting, 
-                                            remaining essentiallyt was popularised in the 
-                                            1960s with the release of Letraset sheets containing 
-                                            Lorem Ipsum passages.When an unknown printer took a 
-                                            galley of type and scramblede. Lorem Ipsum passages.
-                                            When an unknown printer took a galley of type and 
-                                            scramblede  galley of type and sc.</p>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <p>Ahen an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset.Ahen an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
-                    </div>
-                    <div class="item-tag-area">
-                        <div class="item-tag">
-                            <ul>
-                                <li><i class="fas fa-tags"></i><a href="#">Analysis,</a></li>
-                                <li><a href="#">Branding,</a></li>
-                                <li><a href="#">Optimization</a></li>
-                            </ul>
-                        </div>
-                        <div class="item-social">
-                            <ul>
-                                <li><a href="#" class="bg-fb text-textprimary"><i class="fab fa-facebook-f"></i></a></li>
-                                <li><a href="#" class="bg-twitter text-textprimary"><i class="fab fa-twitter"></i></a></li>
-                                <li><a href="#" class="bg-gplus text-textprimary"><i class="fab fa-google-plus-g"></i></a></li>
-                                <li><a href="#" class="bg-linked text-textprimary"><i class="fab fa-linkedin-in"></i></a></li>
-                                <li><a href="#" class="bg-pin text-textprimary"><i class="fab fa-pinterest"></i></a></li>
-                                <li><a href="#" class="text-primarytext bg-blank"><i class="fas fa-plus"></i></a></li>
-                            </ul>
-                        </div>
-                    </div>
-                    <div class="blog-author">
-                        <div class="media media-none--sm">
-                            <div class="item-img">
-                                <img src="img/blog/author2.jpg" class="media-img-auto" alt="Lora Zaman">
-                            </div>
-                            <div class="media-body media-none-sm">
-                                <h4 class="item-title">Lora Zaman</h4>
-                                <div class="item-subtitle">Author</div>
-                                <p>Dorem ipsum dolor sit amet, consectetuer adipiscing elit,sed diam 
-                                    nonummy nibh euismod tincidunt ut laoreet dolore magna.</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
+                        
+{{ content }}
             <div class="col-lg-4 sidebar-break-md sidebar-widget-area">
                 <div class="widget widget-search-box">
                     <div class="input-group stylish-input-group">
