--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,7 +8,7 @@ layout: default
         <div class="row">
             <div class="col-12">
                 <div class="breadcrumbs-area">
-                    <h1>{{ post.title }}</h1>
+                    <h1>{{ page.title }}</h1>
                     <ul>
                         <li>
                             <a href="{{ site.url }}">Home</a>
@@ -16,7 +16,7 @@ layout: default
                         <li>
                             <a href="{{ site.url }}/blog">Blog</a>
                         </li>
-                        <li>{{ post.title }}</li>
+                        <li>{{ page.title }}</li>
                     </ul>
                 </div>
             </div>
@@ -31,7 +31,7 @@ layout: default
             <div class="col-lg-8 col-12">
                 <div class="single-blog-box-layout1">
                     <div class="post-img">
-                        <img src="{{ post.ftImg }}" alt="{{ post.title }}"> 
+                        <img src="{{ page.ftImg }}" alt="{{ page.title }}"> 
                     </div>
                     <div class="item-content">
                         <ul class="entry-meta">
