--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -37,6 +37,9 @@ layout: default
                         <ul class="entry-meta">
                             <li><i class="fas fa-user"></i>by <a href="{{ site.url }}" class="author">Elite Concrete Utah</a></li>
                         </ul>
+                        </div>
+                        </div>
+                    
                         
 {{ content }}
             <div class="col-lg-4 sidebar-break-md sidebar-widget-area">
