fixed blog schema

--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -40,7 +40,7 @@ layout: default
                                 <ul class="entry-meta">
                                     <li>by <a href="{{ site.url }}">Elite Concrete Utah</a></li>
                                 </ul>
-                                <p>{{ post.excerpt }}</p>
+                                <p>{{ post.metaDescription }}</p>
                             </div>
                         </div>
                     </div>
