--- a/_includes/schema/post.html
+++ b/_includes/schema/post.html
@@ -7,7 +7,7 @@
         "@id": "{{ page.permalink }}"
       },
       "headline": "{{ page.title }}",
-      "description": "{{ page.excerpt }}",
+      "description": "{{ page.metaDescription }}",
       "image": "{{ page.ftImg }}",  
       "author": {
         "@type": "Organization",
