--- a/_includes/schema/post.html
+++ b/_includes/schema/post.html
@@ -1,5 +1,28 @@
 <script type="application/ld+json">
     {
+      "@context": "https://schema.org/", 
+      "@type": "BreadcrumbList", 
+      "itemListElement": [{
+        "@type": "ListItem", 
+        "position": 1, 
+        "name": "Home",
+        "item": "{{ site.url }}"  
+      },{
+        "@type": "ListItem", 
+        "position": 2, 
+        "name": "Blog",
+        "item": "{{ site.url }}/blog"  
+      },{
+        "@type": "ListItem", 
+        "position": 3, 
+        "name": "{{ page.title }}",
+        "item": "{{ site.url}}{{page.permalink}}"  
+      }]
+    }
+    </script>
+
+<script type="application/ld+json">
+    {
       "@context": "https://schema.org",
       "@type": "BlogPosting",
       "mainEntityOfPage": {
