--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -27,10 +27,10 @@
                         <div class="footer-menu-box">
                             <ul class="footer-menu-list">
                                 <li>
-                                    <a href="index.html">Home</a>
+                                    <a href="/">Home</a>
                                 </li>
                                 <li>
-                                    <a href="about1.html">About Us</a>
+                                    <a href="/about">About Us</a>
                                 </li>
                                 <li>
                                     <a href="#">Residential</a>
