updated contact info

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -83,7 +83,7 @@
                                     </div>
                                     <div class="media-body space-md">
                                         <ul>
-                                            <li>{{ site.phone}}</li>
+                                            <li><a href="tel:+13854145750">(385) 414-5750</a></li>
                                         </ul>
                                     </div>
                                 </div>
@@ -93,7 +93,7 @@
                                     </div>
                                     <div class="media-body space-md">
                                         <ul>
-                                            <li>{{ site.email }}</li>
+                                            <li><a href="mailto:alphaconcretecoatings@gmail.com">alphaconcretecoatings@gmail.com</a></li>
                                         </ul>
                                     </div>
                                 </div>
@@ -105,7 +105,7 @@
         </div>
     </div>
     <div class="footer-bottom-wrap-layout1">
-        <div class="copyright">Copyright © 2019 Elite Concrete Utah. All Rights Reserved. Built By: <a href="https://sitesbyhayden.com" target="_blank">Sites By Hayden</a></div>
+        <div class="copyright">Copyright © 2020 Elite Concrete Utah. All Rights Reserved. Built By: <a href="https://sitesbyhayden.com" target="_blank">Sites By Hayden</a></div>
     </div>
 </footer>
 <!-- Footer Area End Here -->
