--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -273,11 +273,21 @@
                                 </div>
                                 <div class="media">
                                     <div class="item-icon">
+                                        <i class="fas fa-phone-volume"></i>
+                                    </div>
+                                    <div class="media-body space-md">
+                                        <ul>
+                                            <li><a href="tel:+13854145750">(385) 414-5750</a></li>
+                                        </ul>
+                                    </div>
+                                </div>
+                                <div class="media">
+                                    <div class="item-icon">
                                         <i class="far fa-envelope"></i>
                                     </div>
                                     <div class="media-body space-md">
                                         <ul>
-                                            <li>{{ site.email }}</li>
+                                            <li><a href="mailto:alphaconcretecoatings@gmail.com">alphaconcretecoatings@gmail.com</a></li>
                                         </ul>
                                     </div>
                                 </div>
