--- a/_layouts/contact-page.html
+++ b/_layouts/contact-page.html
@@ -29,7 +29,7 @@ layout: default
                     <div class="contact-form">
                         <div class="heading-layout3">
                             <h3 class="mg-b-10">Request A Free Estimate</h3>
-                            <p>We take on all kinds of projects. Big airplan hangars and small basement floors. We've got a solution for you!</p>
+                            <p>We take on all kinds of projects. Big airplane hangars and small basement floors. We've got a solution for you!</p>
                         </div>
                         {% include form.html %}
                     </div>
@@ -45,6 +45,16 @@ layout: default
                             <h4>E-mail:</h4>
                             <ul>
                                 <li>{{ site.email }}</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="media">
+                        <div class="item-icon">
+                            <i class="fas fa-phone-volume"></i>
+                        </div>
+                        <div class="media-body space-md">
+                            <ul>
+                                <li><a href="tel:+13854145750">(385) 414-5750</a></li>
                             </ul>
                         </div>
                     </div>
