--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -85,6 +85,7 @@
                             <div class="header-topbar-layout1">
                                 <ul class="header-top-left">
                                     <li><i class="far fa-clock"></i>Hours: Mon-Fri: 7.00 am - 7.00 pm</li>
+                                    <li><i class="far fa-phone"></i>(385) 414-5750</li>
                                 </ul>
                             </div>
                         </div>
